deleteBanRecord
